...
import androidx.lifecycle.compose.collectAsStateWithLifecycle
import androidx.lifecycle.viewmodel.compose.viewModel
import com.ericmschmidt.classicsreader.data.TOCEntry
import com.telpirion.compose.R
import com.telpirion.compose.viewmodels.ReadingViewModel

const val SUPPORTING_PANE_TAG = "SupportPaneTag"

class TOCEntryParameterProvider : PreviewParameterProvider<List<TOCEntry>> {
    override val values = sequenceOf(
        listOf(
            TOCEntry("Book Primus", 0, 0),
            TOCEntry("Book Secundus", 1, 0),
...
