...
                            .width(120.dp),
                        colors = buttonColors(
                            containerColor = TelpirionGray,
                            contentColor = Color.White
                        )
                    ) {
                        Text("Read")
                    }
                    Spacer(Modifier.height(24.dp))
                    HorizontalDivider(
                        thickness = 2.dp,
                        color = MaterialTheme.colorScheme.secondary
                    )
...
