...
                                )
                            }
                        }
                    },
                    modifier = Modifier.width(IntrinsicSize.Max)
                        .align(Alignment.CenterHorizontally)
                        .testTag("SearchField"),
                    singleLine = true,
                    shape = RoundedCornerShape(32.dp), // Makes the TextField pill-shaped
                    colors = TextFieldDefaults.colors(
                        // Set a distinct background color for the TextField
                        focusedContainerColor = MaterialTheme.colorScheme.surfaceVariant,
                        unfocusedContainerColor = MaterialTheme.colorScheme.surfaceVariant,
...
