...
                onMenuClick = onHamburgerClick,
                actions = topBarActions
            )
        },
    ) {
        NavigationSuiteScaffold(
            modifier = Modifier.padding(top=25.dp).testTag("NavRail"),
            navigationSuiteItems = {
                navigationItems.forEach { screen ->
                    item(
                        icon = { Icon(screen.icon, contentDescription = null) },
                        label = { Text(stringResource(screen.label)) },
                        selected = currentRoute == screen.route,
...
