...
import kotlinx.coroutines.CoroutineScope
import kotlinx.coroutines.Dispatchers
import kotlinx.coroutines.launch
import com.ericmschmidt.classicsreader.R as CoreResources


const val READING_SCREEN_TAG = "ReadingScreen"
enum class SupportingPaneContent {
    Translation,
    TableOfContents,
}

private fun updateRecentlyRead(
...
            ) {
                Text(
                    text = uiState.info,
                    style = MaterialTheme.typography.titleMedium
                )

                ReadingContent(
                    text = uiState.content,
                    textSizeSp = textSizeSp,
                    onPageTurn = onPageTurn,
                    modifier = Modifier.weight(1f),
                    lineHeight = lineSpacing
                )
...
